--- a/src/pages/privacy.astro
+++ b/src/pages/privacy.astro
@@ -6,35 +6,33 @@ import { Footer } from "../components/footer";
 <Layout title="Privacy Policy" client:load>
   <div class="flex flex-col min-h-screen">
     <main class="container mx-auto px-6 py-12 max-w-3xl">
-      <h2
-        class="text-2xl font-extrabold text-center mb-10 text-gray-900 dark:text-white"
-      >
+      <h2 class="text-2xl font-extrabold text-center mb-10 text-neutral-900">
         Privacy Policy
       </h2>
 
-      <p class="mb-4 text-gray-700 dark:text-gray-300">
+      <p class="mb-4 text-neutral-700">
         This Privacy Policy outlines the practices of Gallerer.
       </p>
 
-      <p class="mb-4 text-gray-700 dark:text-gray-300">
+      <p class="mb-4 text-neutral-700">
         Gallerer does not collect any personal information from its users.
       </p>
 
-      <p class="mb-4 text-gray-700 dark:text-gray-300">
+      <p class="mb-4 text-neutral-700">
         Gallerer does not use cookies or other tracking technologies.
       </p>
 
-      <p class="mb-4 text-gray-700 dark:text-gray-300">
+      <p class="mb-4 text-neutral-700">
         Gallerer does not sell or share any personal information with third
         parties.
       </p>
 
-      <p class="mb-4 text-gray-700 dark:text-gray-300">
+      <p class="mb-4 text-neutral-700">
         Gallerer is committed to protecting the privacy of its users and
         complying with relevant data protection regulations.
       </p>
 
-      <p class="mb-4 text-gray-700 dark:text-gray-300">
+      <p class="mb-4 text-neutral-700">
         Gallerer does not own the copyrights to the images displayed in the
         gallery. Each of the images has its respective authors and comes from
         the platform
@@ -46,7 +44,7 @@ import { Footer } from "../components/footer";
         and is shown for educational and demonstration purposes only.
       </p>
 
-      <p class="mb-4 text-gray-700 dark:text-gray-300">
+      <p class="mb-4 text-neutral-700">
         If you have any questions or concerns about this Privacy Policy, please
         contact us at
         <a
@@ -56,7 +54,7 @@ import { Footer } from "../components/footer";
         >.
       </p>
 
-      <p class="text-sm text-gray-500 dark:text-gray-400 mt-8">
+      <p class="text-sm text-neutral-500 mt-8">
         Last updated: December 9, 2025
       </p>
     </main>
