--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,13 +5,14 @@ import { InView } from "../components/ui/in-view";
 import { InViewImagesGrid } from "../components/InViewImagesGrid";
 import { CardIntroduction } from "../components/CardIntroduction";
 import { Footer } from "../components/footer";
-
+import Navbar from "../components/navbar";
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
 
 <Layout>
   <div>
+    <Navbar client:load />
     <Welcome />
 
     <CardIntroduction client:load />
