--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,1 +1,9 @@
 @import "tailwindcss";
+
+@custom-variant dark (&:where(.dark, .dark *));
+
+@custom-variant light (&:where(.light, .light *));
+
+* {
+  font-family: "geist", sans-serif;
+}
