fix: correct name image on the component wellcome.astro

--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -1,6 +1,6 @@
 ---
-import backgroundDark from "../assets/background.jpg";
-import backgroundLight from "../assets/backgroundLight.jpg";
+import backgroundDark from "../assets/Background.jpg";
+import backgroundLight from "../assets/BackgroundLight.jpg";
 ---
 
 <div class="relative w-screen h-screen grid min-h-screen">
