--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -70,7 +70,9 @@ import backgroundLight from "../assets/BackgroundLight.jpg";
           class="h-24 dark:invert"
           loading="eager"
         />
-        <h1 class="text-5xl font-bold sm:text-6xl md:text-7xl">Gallerer</h1>
+        <h1 class="ml-2 text-5xl font-bold sm:text-6xl md:text-7xl">
+          Gallerer
+        </h1>
       </div>
       <h1 class="text-2xl sm:text-3xl md:text-4xl">A simple image gallery</h1>
       <section
